--- a/main.tex
+++ b/main.tex
@@ -417,6 +417,7 @@ showstringspaces=false,
 inputencoding=utf8,
 literate={ϵ}{$\epsilon$}1
         {θ}{$\theta$}1
+        {λ}{$\lambda$}1
         {π}{$\pi$}1
         {⋅}{$\cdot$}1
         {⎡}{$\lceil$}1
