--- a/references.bib
+++ b/references.bib
@@ -154,3 +154,10 @@
   year={2019},
   publisher={Springer}
 }
+
+@inproceedings{puckette2011infuriating,
+  title={Infuriating nonlinear reverberator},
+  author={Puckette, Miller},
+  booktitle={ICMC},
+  year={2011}
+}
