--- a/lesson5.tex
+++ b/lesson5.tex
@@ -448,23 +448,22 @@ Out[22]:
 \end{python}
 
 Alternativ können die eigenwerte berechnet werden via \texttt{eig()} und daraus eine diagonalmatrix gemacht werden:
-\todo[inline]{WRONG CODE BELOW.}
+% \todo[inline]{WRONG CODE BELOW.}
 \begin{python}{diagonalisierung via \texttt{eig()}}
-import sympy as sp  
-M = sp.Matrix([[3, -2,  4, -2], 
-               [5,  3, -3, -2], 
-               [5, -2,  2, -2], 
-               [5, -2, -3,  3]]) 
-In [21]: _,D = M.diagonalize()
-In [22]: D
-Out[22]:
-⎡-2  0  0  0⎤
-⎢           ⎥
-⎢0   3  0  0⎥
-⎢           ⎥
-⎢0   0  5  0⎥
-⎢           ⎥
-⎣0   0  0  5⎦
+In [1]: A = array([
+    ...: [3,-2,4,-2],
+    ...: [5,3,-3,-2],
+    ...: [5,-2,2,-2],
+    ...: [5,-2,-3,3]])
+
+In [2]: λs, xs = eig(A)
+
+In [3]: diag(λs)
+Out[3]:
+array([[ 3.,  0.,  0.,  0.],
+       [ 0., -2.,  0.,  0.],
+       [ 0.,  0.,  5.,  0.],
+       [ 0.,  0.,  0.,  5.]])
 \end{python}
 
 
@@ -537,7 +536,7 @@ Out[1]: array([[1.00000000e+00, 2.22218033e-17],
 \todo[inline]{todo.}
 \subsubsection*{Householder Matrix}
 \todo[inline]{todo.}
-\subsubsection*{Haddamard Matrix}
+\subsubsection*{Hadamard Matrix}
 \todo[inline]{todo.}
 \subsubsection*{Toeplitz Matrix}\label{subsub:toeplitz}
 \index{Toeplitz}
