--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 \usepackage{transparent}
 
 
+\usepackage{tabularx}
 
 % ==========COLORS=============================
 \definecolor{importantColor}{RGB}{255,255,241}
@@ -528,7 +529,7 @@ literate={ϵ}{$\epsilon$}1
 \part{Semester II}
 % \include{lesson4}
 \include{lesson5}
-% \include{lesson6}
+\include{lesson6}
 % \include{lesson7}
 % \include{lesson8}
 % \include{lesson9}
