--- a/lesson5.tex
+++ b/lesson5.tex
@@ -493,7 +493,9 @@ Sogenannte \emph{Drehmatrizen} oder auch Rotationsmatrizen sind orthogonale Matr
 In Abbildung \ref{fig:rotMat} wurden zufällig gestreute Punkte um $20^\circ$ \emph{um den Ursprung} gedreht. In diesem Notebook kann dies nachvollzogen werden: 
 \colab{https://colab.research.google.com/github/hrtlacek/matheFuerTonmeisterinnen/blob/master/python/notebooks/rotationMatrix.ipynb}
 
-Die geschah mit der Rotationsmatrix:
+\todo[inline]{Small bug in colab notebook.}
+
+Dies geschah mit der Rotationsmatrix:
 
 
 \begin{equation}
