--- a/lesson5.tex
+++ b/lesson5.tex
@@ -892,7 +892,7 @@ $$ \begin{vmatrix} a & b  \\
 
  \end{vmatrix} = ad - bc$$
 
-Die Determinante hat eine Graphische Interpretation! SIehe folgendes Notebook!
+Die Determinante hat eine Graphische Interpretation! Siehe folgendes Notebook!
 
 \colab{https://colab.research.google.com/github/hrtlacek/matheFuerTonmeisterinnen/blob/master/python/notebooks/Determinante.ipynb}
 
