--- a/lesson2.tex
+++ b/lesson2.tex
@@ -127,7 +127,7 @@ Engl. 'unit step' auch oft Heaviside\footnote{Britischer Mathematiker und Physik
 cos(x) = cos(-x)
 \end{equation}
 
-\section{$e^x$}
+\section{$e^x$} \label{sec:eulerscheZahl}
 Eulersche Zahl $e \approx 2.718281828459045$.\footnote{Benannt nach Leonhard Euler, 15. April 1707 – 18. September 1783. Einer der wichtigsten Mathematiker der Geschichte. }
 
 \begin{figure}[H]
