--- a/lesson3.tex
+++ b/lesson3.tex
@@ -120,11 +120,12 @@ $$ z = r (cos(\varphi) + i sin(\varphi))$$
 
 
 
-\section{Eulersche Darstellung}
+\section{Eulersche Darstellung}\label{sec:eulersche_darstellung}
 
 \index{Eulersche Formel}
 \index{Eulersche Darstellung}
 \index{Exponentialform}
+% \index{Eulersche Identität}
 
 Wohl eine der wichtigsten Gleichungen für die Audio Technik ist die Eulersche Formel:
 
