--- a/python/notebooks/Determinante.ipynb
+++ b/python/notebooks/Determinante.ipynb
@@ -170,6 +170,9 @@
   }
  ],
  "metadata": {
+  "citation-manager": {
+   "items": {}
+  },
   "colab": {
    "provenance": []
   },
@@ -188,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
