--- a/python/notebooks/fourierReihe.ipynb
+++ b/python/notebooks/fourierReihe.ipynb
@@ -182,6 +182,9 @@
   }
  ],
  "metadata": {
+  "citation-manager": {
+   "items": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -197,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
